syntax = "proto3";

package order;

option go_package = "ecommerce-app/proto/order;order";

service OrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order);
  rpc GetOrder(GetOrderRequest) returns (Order);
  rpc ListOrdersByUser(ListOrdersByUserRequest) returns (ListOrdersResponse);
}

message OrderItem {
  string product_id = 1;
  string product_name = 2;
  int32 quantity = 3;
  double unit_price = 4;
}

message Order {
  string id = 1;
  string user_id = 2;
  repeated OrderItem items = 3;
  double total = 4;
  string status = 5;
  string created_at = 6;
}

message CreateOrderRequest {
  string user_id = 1;
  repeated OrderItem items = 2;
  double total = 3;
}

message GetOrderRequest {
  string id = 1;
}

message ListOrdersByUserRequest {
  string user_id = 1;
  int32 page = 2;
  int32 page_size = 3;
}

message ListOrdersResponse {
  repeated Order orders = 1;
  int32 total = 2;
}
